--- a/composer.json
+++ b/composer.json
@@ -4,27 +4,63 @@
     "type": "library",
     "license": "MIT",
     "authors": [
-      {
-        "name": "GIGABAIT",
-        "email": "xgigabaitx@gmail.com"
-      }
+        {
+            "name": "GIGABAIT",
+            "email": "xgigabaitx@gmail.com"
+        }
     ],
     "minimum-stability": "dev",
     "require": {
-      "php": "^7.3|^8.0",
-      "illuminate/support": "^8.0"
+        "php": "^7.3|^8.0",
+        "illuminate/support": "^8.0"
     },
     "autoload": {
-      "psr-4": {
-        "Gigabait\\Sso\\": "src/"
-      }
+        "psr-4": {
+            "Gigabait\\Sso\\": "src/"
+        }
     },
     "extra": {
-      "laravel": {
-        "providers": [
-          "Gigabait\\Sso\\SsoServiceProvider"
-        ]
-      }
+        "laravel": {
+            "providers": [
+                "Gigabait\\Sso\\SsoServiceProvider"
+            ]
+        }
     }
-  }
-  
+}
+// {
+//     "name": "gigabait/laravel-sso",
+//     "description": "Laravel library for implementing SSO authorizations",
+//     "type": "library",
+//     "license": "MIT",
+//     "authors": [
+//         {
+//             "name": "GIGABAIT",
+//             "email": "xgigabaitx@gmail.com"
+//         }
+//     ],
+//     "minimum-stability": "dev",
+//     "require": {
+//         "php": "^7.3|^8.0",
+//         "illuminate/support": "^8.0"
+//     },
+//     "autoload": {
+//         "psr-4": {
+//             "Gigabait\\Sso\\": "src/"
+//         }
+//     },
+//     "extra": {
+//         "laravel": {
+//             "providers": [
+//                 "Gigabait\\Sso\\SsoServiceProvider"
+//             ]
+//         },
+//         "scripts": {
+//             "post-install-cmd": [
+//                 "php -r \"$configFile = 'config/app.php'; $config = require_once $configFile; $provider = 'Gigabait\\\\Sso\\\\SsoServiceProvider'; if (!in_array($provider, $config['providers'])) { array_push($config['providers'], $provider); $configContent = '<?php\\nreturn ' . var_export($config, true) . ';'; file_put_contents($configFile, $configContent); }\""
+//             ],
+//             "post-update-cmd": [
+//                 "php -r \"$configFile = 'config/app.php'; $config = require_once $configFile; $provider = 'Gigabait\\\\Sso\\\\SsoServiceProvider'; if (!in_array($provider, $config['providers'])) { array_push($config['providers'], $provider); $configContent = '<?php\\nreturn ' . var_export($config, true) . ';'; file_put_contents($configFile, $configContent); }\""
+//             ]
+//         }
+//     }
+// }
